setup neo4j env

--- a/src/data/hn/Makefile
+++ b/src/data/hn/Makefile
@@ -12,6 +12,8 @@ clean: ## Removes build artifacts and any logs
 
 venv: ## Creates or updates project's virtual enviornment. To activate, run: source venv/bin/activate
 	python3 -m venv venv --prompt venv
+	venv/bin/python -m pip install --upgrade pip
+	venv/bin/python -m pip install setuptools
 	venv/bin/pip install -r requirements.txt
 
 update: ## Updates dependencies in virtual environment
