--- a/src/infrastructure/redis/docker-compose.yml
+++ b/src/infrastructure/redis/docker-compose.yml
@@ -1,4 +1,4 @@
-version: '2'
+version: "3.9"
 
 services:
   redis:
@@ -16,9 +16,25 @@ services:
     container_name: redis-commander
     hostname: redis-commander
     image: rediscommander/redis-commander:latest
-    restart: always
     environment:
     - REDIS_HOSTS=local:redis:6379
     ports:
     - "8081:8081"
     restart: always
+  rq-dashboard:
+    container_name: rq-dashboard
+    hostname: rq-dashboard
+    image: eoranged/rq-dashboard:latest
+    environment:
+    - RQ_DASHBOARD_REDIS_URL=redis://redis:6379
+    ports:
+    - "9181:9181"
+    restart: always
+  rq:
+    image: rq
+    restart: always
+    command: ["rq", "worker", "-u", "redis://localhost:6379", "comments"]
+    deploy:
+      mode: replicated
+      replicas: 6
+    network_mode: host
